vcl/Module_vcl.mk
@@ -200,12 +200,16 @@ $(eval $(call gb_Module_add_check_targets,vcl,\
 	CppunitTest_vcl_app_test \
 	CppunitTest_vcl_jpeg_read_write_test \
 	CppunitTest_vcl_svm_test \
-	CppunitTest_vcl_pdfexport \
 	CppunitTest_vcl_errorhandler \
 	CppunitTest_vcl_bitmap_render_test \
 	CppunitTest_vcl_apitests \
 ))
 
+ifneq (,$(filter PDFIUM,$(BUILD_TYPE)))
+$(eval $(call gb_Module_add_check_targets,vcl,\
+	CppunitTest_vcl_pdfexport \
+))
+endif
 
 ifeq ($(USING_X11),TRUE)
 $(eval $(call gb_Module_add_check_targets,vcl,\
